--- a/Cruz.html
+++ b/Cruz.html
@@ -154,36 +154,22 @@
       <div class="video-wrap">
         <article class="video-card reveal delay-1">
           <div class="video-aspect">
-            <!-- 📹 OPTION A: YOUTUBE/VIMEO EMBED  -->
-            <!-- 1) Replace the src below with your share link (e.g., https://www.youtube.com/embed/VIDEO_ID). -->
-            <!-- 2) Keep the rest of the attributes for responsiveness & privacy. -->
-            <iframe
-              title="Intro Video"
-              src="about:blank" data-ytid="fQyqqewv4S4" id="intro-yt" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-
-            <!-- 📁 OPTION B: LOCAL/SELF-HOSTED VIDEO  -->
-            <!-- If you prefer a local file, comment out the iframe above and uncomment the <video> block below. -->
-            <!--
-            <video controls preload="metadata" poster="poster.jpg">
-              <source src="/videos/intro.mp4" type="video/mp4" />
+            <!-- Switched to a local/hosted MP4 for maximum reliability. Place your file at /videos/intro.mp4 -->
+            <video id="intro-local" controls preload="metadata" playsinline poster="poster.jpg">
+              <source src="videos/intro.mp4" type="video/mp4" />
               Sorry, your browser doesn't support embedded videos.
             </video>
-            -->
-
-            <!-- Placeholder visible until you set a video src -->
             <div class="placeholder" aria-hidden="true">
               <div style="display:grid; gap:8px; place-items:center">
-                <span>If the embed fails, open the video directly.</span>
+                <span>If the player doesn’t appear, make sure <code>videos/intro.mp4</code> exists.</span>
                 <a class="chip" href="https://youtu.be/fQyqqewv4S4" target="_blank" rel="noopener">Open on YouTube</a>
               </div>
             </div>
           </div>
+            </div>
+          </div>
         </article>
-        <p class="note reveal delay-2">Tip: Use the privacy‑enhanced embed (<code>youtube-nocookie.com</code>). If you see a YouTube error like <strong>153</strong>, the video owner may have disabled embedding—open the video in YouTube Studio → Details → <em>More options</em> → <em>Distribution options</em> and enable <em>Allow embedding</em>. Or switch to the local <code>&lt;video&gt;</code> block.</p>
+        <p class="note reveal delay-2">Upload your file to <code>videos/intro.mp4</code> (create the <code>videos</code> folder next to this HTML). Optional: add a <code>poster.jpg</code> preview in the same folder. If you still want to embed YouTube later, I can re-enable the iframe after you allow embedding in YouTube Studio.</p>
       </div>
     </section>
 
@@ -258,12 +244,7 @@
       document.querySelectorAll('.reveal').forEach(el=> el.classList.add('show'));
     }
 
-    // YouTube embed with origin param + fallback link
-    const yt = document.getElementById('intro-yt');
-    const placeholder = document.querySelector('#video .placeholder');
-    if (yt && yt.dataset.ytid) {
-      const id = yt.dataset.ytid.trim();
-      const base = `https://www.youtube-nocookie.com/embed/${id}`;
+    // No YouTube embed needed when using local file. Keeping this block empty intentionally.`;
       const params = new URLSearchParams({ rel: '0', modestbranding: '1', playsinline: '1' });
       if (location.protocol.startsWith('http')) params.set('origin', location.origin);
       yt.src = `${base}?${params.toString()}`;
