--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name — Resume & Portfolio</title>
-  <meta name="description" content="One‑page resume, video intro, portfolio, and hobbies with smooth scroll animations." />
-  <meta property="og:title" content="Your Name — Resume & Portfolio" />
-  <meta property="og:description" content="One‑page resume, video intro, portfolio, and hobbies with smooth scroll animations." />
+  <title>Feiyang Pang — Resume & Portfolio</title>
+  <meta name="description" content="Feiyang Pang — one‑page resume, video intro, portfolio (Pang’s Bikeshop & Freelancer game), and hobbies with smooth scroll animations." />
+  <meta property="og:title" content="Feiyang Pang — Resume & Portfolio" />
+  <meta property="og:description" content="Video introduction, projects, and hobbies." />
   <meta name="theme-color" content="#0b1224" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <script>document.documentElement.classList.add('js');</script>
   <style>
     :root{
       --bg: #0b1224;
@@ -41,11 +42,8 @@
     a:hover{text-decoration:underline}
 
     /* Header */
-    header{
-      position:sticky; top:0; z-index:50; backdrop-filter: blur(8px);
-      background:linear-gradient(to bottom, rgba(11,18,36,0.9), rgba(11,18,36,0.6));
-      border-bottom:1px solid var(--stroke);
-    }
+    header{ position:sticky; top:0; z-index:50; backdrop-filter: blur(8px);
+      background:linear-gradient(to bottom, rgba(11,18,36,0.9), rgba(11,18,36,0.6)); border-bottom:1px solid var(--stroke); }
     .nav{display:flex; align-items:center; justify-content:space-between; padding:12px 0}
     .brand{display:flex; align-items:center; gap:10px}
     .brand .dot{width:12px; height:12px; border-radius:50%; background:linear-gradient(135deg,var(--accent), #9ec0ff)}
@@ -98,9 +96,10 @@
     /* Footer */
     footer{padding:40px 0 80px; color:var(--muted); border-top:1px solid var(--stroke)}
 
-    /* Scroll reveal */
-    .reveal{opacity:0; transform: translateY(16px); filter: blur(2px); transition: opacity .6s ease, transform .6s ease, filter .6s ease}
-    .reveal.show{opacity:1; transform: translateY(0); filter: blur(0)}
+    /* Scroll reveal — progressive enhancement */
+    .reveal{opacity:1; transform:none; filter:none}
+    .js .reveal{opacity:0; transform: translateY(16px); filter: blur(2px); transition: opacity .6s ease, transform .6s ease, filter .6s ease}
+    .js .reveal.show{opacity:1; transform: translateY(0); filter: blur(0)}
     .delay-1{transition-delay:.08s} .delay-2{transition-delay:.16s} .delay-3{transition-delay:.24s} .delay-4{transition-delay:.32s}
 
     /* Accessibility: respect reduced motion */
@@ -170,17 +169,16 @@
               </div>
             </div>
           </div>
-            </div>
-          </div>
-            </div>
-          </div>
         </article>
         <p class="note reveal delay-2">Using a YouTube embed (privacy‑enhanced <code>youtube-nocookie.com</code>). If embedding is disabled or blocked, the button opens the video on YouTube. To change videos later, update the <code>data-ytid</code> on the iframe.</p>
       </div>
     </section>
 
     <!-- Portfolio -->
-    $1
+    <section id="portfolio" class="container">
+      <h2 class="section-title reveal">Portfolio</h2>
+      <p class="subtle reveal delay-1">Two selected projects with video demos.</p>
+      <div class="grid">
         <article class="card reveal delay-1">
           <div class="thumb">PANG'S BIKESHOP</div>
           <div class="content">
@@ -205,7 +203,8 @@
             </div>
           </div>
         </article>
-      $2
+      </div>
+    </section>
 
     <!-- Hobbies -->
     <section id="hobbies" class="container">
@@ -230,42 +229,48 @@
 
   <footer>
     <div class="container">
-      <p>© <span id="year"></span> Your Name. Built with vanilla HTML/CSS/JS. <span class="subtle">Last updated <span id="updated"></span>.</span></p>
+      <p>© <span id="year"></span> Feiyang Pang. Built with vanilla HTML/CSS/JS. <span class="subtle">Last updated <span id="updated"></span>.</span></p>
     </div>
   </footer>
 
   <script>
+  (function(){
     // Footer data
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.getElementById('updated').textContent = new Date().toLocaleDateString();
+    try {
+      var y = document.getElementById('year');
+      var u = document.getElementById('updated');
+      if (y) y.textContent = new Date().getFullYear();
+      if (u) u.textContent = new Date().toLocaleDateString();
+    } catch (e) {}
 
-    // IntersectionObserver for scroll reveal
-    const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
-    if(!prefersReduced){
-      const io = new IntersectionObserver((entries)=>{
-        for(const e of entries){ if(e.isIntersecting){ e.target.classList.add('show'); io.unobserve(e.target); } }
-      }, {root:null, rootMargin:'0px 0px -10% 0px', threshold:0.15});
-      document.querySelectorAll('.reveal').forEach(el=> io.observe(el));
-    } else {
-      document.querySelectorAll('.reveal').forEach(el=> el.classList.add('show'));
-    }
+    // IntersectionObserver for scroll reveal (progressive)
+    try {
+      var prefersReduced = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+      var els = document.querySelectorAll('.reveal');
+      if (!prefersReduced && 'IntersectionObserver' in window) {
+        var io = new IntersectionObserver(function(entries){
+          entries.forEach(function(e){ if(e.isIntersecting){ e.target.classList.add('show'); io.unobserve(e.target);} });
+        }, {root:null, rootMargin:'0px 0px -10% 0px', threshold:0.15});
+        els.forEach(function(el){ io.observe(el); });
+      } else {
+        els.forEach(function(el){ el.classList.add('show'); });
+      }
+    } catch (e) { document.querySelectorAll('.reveal').forEach(function(el){ el.classList.add('show'); }); }
 
     // YouTube embed with origin param + placeholder fallback
-    const yt = document.getElementById('intro-yt');
-    const placeholder = document.querySelector('#video .placeholder');
-    if (yt && yt.dataset.ytid) {
-      const id = yt.dataset.ytid.trim();
-      const base = `https://www.youtube-nocookie.com/embed/${id}`;
-      const params = new URLSearchParams({ rel: '0', modestbranding: '1', playsinline: '1' });
-      if (location.protocol.startsWith('http')) params.set('origin', location.origin);
-      yt.src = `${base}?${params.toString()}`;
-      yt.addEventListener('load', () => { if (placeholder) placeholder.style.display = 'none'; });
-    }`;
-      const params = new URLSearchParams({ rel: '0', modestbranding: '1', playsinline: '1' });
-      if (location.protocol.startsWith('http')) params.set('origin', location.origin);
-      yt.src = `${base}?${params.toString()}`;
-      yt.addEventListener('load', () => { if (placeholder) placeholder.style.display = 'none'; });
-    }
+    try {
+      var yt = document.getElementById('intro-yt');
+      var placeholder = document.querySelector('#video .placeholder');
+      if (yt && yt.dataset.ytid) {
+        var id = yt.dataset.ytid.trim();
+        var base = 'https://www.youtube-nocookie.com/embed/' + id;
+        var params = new URLSearchParams({ rel: '0', modestbranding: '1', playsinline: '1' });
+        if (location.protocol.indexOf('http') === 0) params.set('origin', location.origin);
+        yt.src = base + '?' + params.toString();
+        yt.addEventListener('load', function(){ if (placeholder) placeholder.style.display = 'none'; });
+      }
+    } catch (e) {}
+  })();
   </script>
 </body>
 </html>
