--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
       /* Uniform video sizing for intro + portfolio */
     .video-aspect.video-uniform{max-width:720px;margin:0 auto;border-radius:var(--radius);overflow:hidden;border:1px solid var(--stroke);box-shadow:var(--shadow);}
     @media (max-width:768px){.video-aspect.video-uniform{max-width:100%;}}
+      /* Center portfolio cards and unify video sizing */
+    #portfolio .grid{grid-template-columns:1fr; gap:32px; justify-items:center}
+    #portfolio .card{max-width:780px; margin:0 auto; padding-bottom:8px}
+    #portfolio .content{text-align:center}
+    #portfolio .content p{max-width:680px; margin:6px auto 12px}
+    #portfolio .meta{justify-content:center}
+    .video-aspect.video-uniform{max-width:720px; margin:0 auto; border-radius:var(--radius); overflow:hidden; border:1px solid var(--stroke); box-shadow:var(--shadow)}
+    @media (max-width:768px){.video-aspect.video-uniform{max-width:100%}}
   </style>
 </head>
 <body>
@@ -238,12 +246,21 @@
     <!-- Hobbies -->
     <section id="hobbies" class="container">
       <h2 class="section-title reveal">Hobby Presentation</h2>
-      <p class="subtle reveal delay-1">Let people see your personality. Add photos, short stories, or links.</p>
+      
       <div class="hobbies">
         <div class="hobby reveal delay-1">
-          <h4>Photography</h4>
-          <p>Street & travel photos — exploring light, shadow, and color theory.</p>
+          <h4>Downhill Mountain Biking</h4>
+          <p>Fast, technical descents on rugged trails; focuses on line choice, braking control, and body positioning. Requires protective gear and bike handling under high speed.</p>
         </div>
+        <div class="hobby reveal delay-2">
+          <h4>Skiing</h4>
+          <p>Alpine turns on variable snow and terrain; builds balance, leg strength, and edge control. Reading the slope and linking smooth turns are the core skills.</p>
+        </div>
+        <div class="hobby reveal delay-3">
+          <h4>Badminton</h4>
+          <p>Explosive footwork with precise racket control; mixes quick net play with deep clears and jump smashes. Emphasizes anticipation, placement, and quick recovery.</p>
+        </div>
+      </div>
         <div class="hobby reveal delay-2">
           <h4>Running</h4>
           <p>5K to half‑marathons. PB: 1:37. Training with a low‑HR approach.</p>
