--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       /* Portfolio polish */
     #portfolio .grid{grid-template-columns:repeat(auto-fit,minmax(380px,1fr));gap:28px}
     #portfolio .card{padding-bottom:8px}
-    #portfolio .content{ text-align:center; padding:16px 16px 8px; }
-    #portfolio .content h3{ margin:8px 0 6px; font-size:22px; text-align:center; }
+    #portfolio .content{ max-width:720px; margin:0 auto 8px; text-align:center; padding:0; }
+    #portfolio .content h3{ font-size:28px; line-height:1.2; margin:0 0 6px; text-align:center; }
     #portfolio .meta{justify-content:center}
       /* Uniform video sizing for intro + portfolio */
     .video-aspect.video-uniform{max-width:720px;margin:0 auto;border-radius:var(--radius);overflow:hidden;border:1px solid var(--stroke);box-shadow:var(--shadow);}
@@ -124,7 +124,7 @@
     #portfolio .grid{grid-template-columns:1fr; gap:32px; justify-items:center}
     #portfolio .card{max-width:780px; margin:0 auto; padding-bottom:8px}
     #portfolio .content{text-align:center}
-    #portfolio .content p{ margin:0 auto 12px; color:var(--muted); font-size:14px; max-width:720px; text-align:center; }
+    #portfolio .content p{ margin:0 auto 12px; color:var(--muted); font-size:15px; max-width:720px; text-align:center; }
     #portfolio .meta{justify-content:center}
     .video-aspect.video-uniform{max-width:720px; margin:0 auto; border-radius:var(--radius); overflow:hidden; border:1px solid var(--stroke); box-shadow:var(--shadow)}
     @media (max-width:768px){.video-aspect.video-uniform{max-width:100%}}
