--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
     #portfolio .meta{justify-content:center}
     .video-aspect.video-uniform{max-width:720px; margin:0 auto; border-radius:var(--radius); overflow:hidden; border:1px solid var(--stroke); box-shadow:var(--shadow)}
     @media (max-width:768px){.video-aspect.video-uniform{max-width:100%}}
+      /* === FINAL OVERRIDES: Portfolio headings centered + underline === */
+    #portfolio .grid{justify-items:center}
+    #portfolio .card{display:grid; gap:12px; justify-items:center; max-width:780px; margin:0 auto}
+    #portfolio .content{margin:0; padding:0; text-align:center}
+    #portfolio .content h3{font-size:32px; line-height:1.15; margin:0; padding-bottom:8px; display:inline-block; border-bottom:2px solid var(--accent)}
+    #portfolio .content p{margin:6px 0 0; color:var(--muted); font-size:15px}
+    #portfolio .video-aspect.video-uniform{margin-top:10px;}
   </style>
 </head>
 <body>
