--- a/index.html
+++ b/index.html
@@ -193,62 +193,68 @@
       </div>
     </section>
 
-    <!-- Portfolio -->
-    $1
-        <!-- Pang's Bikeshop (embedded video) -->
-        <article class="card reveal delay-1">
-          <div class="content">
-            <h3>Pang's Bikeshop</h3>
-            <p class="subtle">Watch the demo below and visit the live site at 
-              <a href="https://bikeshop-u77v.onrender.com" target="_blank" rel="noopener">bikeshop-u77v.onrender.com</a>.
-            </p>
-          </div>
-          <div class="video-aspect video-uniform">
-            <iframe
-              id="yt-bikeshop"
-              title="Pang's Bikeshop — Demo"
-              src="about:blank"
-              data-ytid="a-v6B6mBPQM"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-            <div class="placeholder" aria-hidden="true">
-              <div style="display:grid; gap:8px; place-items:center">
-                <span>Can’t play inline? Watch on YouTube</span>
-                <a class="chip" href="https://youtu.be/a-v6B6mBPQM" target="_blank" rel="noopener">Open</a>
-              </div>
-            </div>
-          </div>
-        </article>
+<section id="portfolio" class="container">
+  <h2 class="section-title reveal">Portfolio</h2>
 
-        <!-- Freelancer (embedded video) -->
-        <article class="card reveal delay-2">
-          <div class="content">
-            <h3>Freelancer (2D Game)</h3>
-            <p class="subtle">Watch the gameplay below and try the live demo at 
-              <a href="https://demo-9ri.pages.dev" target="_blank" rel="noopener">demo-9ri.pages.dev</a>.
-            </p>
+  <div class="grid">
+    <!-- Pang's Bikeshop (embedded video) -->
+    <article class="card reveal delay-1">
+      <div class="content">
+        <h3>Pang's Bikeshop</h3>
+        <p class="subtle">
+          Watch the demo below and visit the live site at
+          <a href="https://bikeshop-u77v.onrender.com" target="_blank" rel="noopener">bikeshop-u77v.onrender.com</a>.
+        </p>
+      </div>
+      <div class="video-aspect video-uniform">
+        <iframe
+          id="yt-bikeshop"
+          title="Pang's Bikeshop — Demo"
+          src="about:blank"
+          data-ytid="a-v6B6mBPQM"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <div class="placeholder" aria-hidden="true">
+          <div style="display:grid; gap:8px; place-items:center">
+            <span>Can’t play inline? Watch on YouTube</span>
+            <a class="chip" href="https://youtu.be/a-v6B6mBPQM" target="_blank" rel="noopener">Open</a>
           </div>
-          <div class="video-aspect video-uniform">
-            <iframe
-              id="yt-freelancer"
-              title="Freelancer — Gameplay"
-              src="about:blank"
-              data-ytid="NWMCF9s-GlM"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-            <div class="placeholder" aria-hidden="true">
-              <div style="display:grid; gap:8px; place-items:center">
-                <span>Can’t play inline? Watch on YouTube</span>
-                <a class="chip" href="https://youtu.be/NWMCF9s-GlM" target="_blank" rel="noopener">Open</a>
-              </div>
-            </div>
+        </div>
+      </div>
+    </article>
+
+    <!-- Freelancer (embedded video) -->
+    <article class="card reveal delay-2">
+      <div class="content">
+        <h3>Freelancer (2D Game)</h3>
+        <p class="subtle">
+          Watch the gameplay below and try the live demo at
+          <a href="https://demo-9ri.pages.dev" target="_blank" rel="noopener">demo-9ri.pages.dev</a>.
+        </p>
+      </div>
+      <div class="video-aspect video-uniform">
+        <iframe
+          id="yt-freelancer"
+          title="Freelancer — Gameplay"
+          src="about:blank"
+          data-ytid="NWMCF9s-GlM"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <div class="placeholder" aria-hidden="true">
+          <div style="display:grid; gap:8px; place-items:center">
+            <span>Can’t play inline? Watch on YouTube</span>
+            <a class="chip" href="https://youtu.be/NWMCF9s-GlM" target="_blank" rel="noopener">Open</a>
           </div>
-        </article>
-      $2
+        </div>
+      </div>
+    </article>
+  </div>
+</section>
+
 
     <!-- Hobbies -->
     <section id="hobbies" class="container">
